<resources>
  <string name="app_name">Weather App</string>
  <string name="city_example">Смоленск</string>
  <string name="city">Город</string>
  <string name="year_season">Сезон года</string>
  <string name="city_type">Тип города</string>
  <string name="arg_tempr">Средняя температура</string>

  <string name="spring">Весна</string>
  <string name="summer">Лето</string>
  <string name="autumn">Осень</string>
  <string name="winter">Зима</string>
  <string name="city_name">Название города</string>
  <string name="months_tempr">Температура по месяцам</string>
  <string name="temp_type">Единицы измерения температуры</string>
  <string name="save_btn">Сохранить</string>
  <string name="big_city">Большой</string>
  <string name="small_city">Маленький</string>
  <string name="medium_city">Средний</string>
  <string name="celsius">по Цельсию</string>
  <string name="fahrenheit">По Фаренгейту</string>
  <string name="kelvin">По Кельвину</string>

  <string-array name="months">
    <item>Январь</item>
    <item>Февраль</item>
    <item>Май</item>
    <item>Апрель</item>
    <item>Май</item>
    <item>Июнь</item>
    <item>Июль</item>
    <item>Август</item>
    <item>Сентябрь</item>
    <item>Октябрь</item>
    <item>Ноябрь</item>
    <item>Декабрь</item>
  </string-array>
</resources>